--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -1,7 +1,7 @@
 ---
 title: 'Blog Post number 3'
-date: 2014-08-14
 permalink: /posts/2014/08/blog-post-3/
+categories : [jyyos-2025]
 tags:
   - cool posts
   - category1
