--- a/_posts/L5.md
+++ b/_posts/L5.md
@@ -3,7 +3,7 @@ title: '程序和进程/进程的地址空间'
 date: 2025-04-01
 permalink: /posts/jyyos-2025/process/
 categories : [jyyos-2025]
-excerpt : "点击查看全文"
+#excerpt : "点击查看全文"
 ---
 
 
