--- a/_posts/2025-04-01-L5.md
+++ b/_posts/2025-04-01-L5.md
@@ -6,7 +6,8 @@ categories : [jyyos-2025]
 #excerpt : "点击查看全文"
 ---
 
-###立即复制状态机 : fork()
+立即复制状态机 : fork()
+------
 复制进程的所有状态 ： 寄存器，每一个字节的内存
 
 区分这两个状态机的唯一方式 : 返回值不同
