--- a/_posts/2025-04-01-L5.md
+++ b/_posts/2025-04-01-L5.md
@@ -8,15 +8,13 @@ categories : [jyyos-2025]
 
 立即复制状态机 : fork()
 ------
-复制进程的所有状态 ： 寄存器，每一个字节的内存
-
-区分这两个状态机的唯一方式 : 返回值不同
+复制进程的所有状态 ： 寄存器，每一个字节的内存。区分这两个状态机的唯一方式 : 返回值不同
 
 思考一个问题 : 
 进程的父子关系中 ：A->B->C，B终止了，C的ppid是什么
 
 B运行waitpid()等待C进程结束，C进程结束时会发送一个信号给父进程。
-加入C还没有结束，B进程就被终止，C进程结束后的信号该发送到哪?
+假如C还没有结束，B进程就被终止，C进程结束后的信号该发送到哪?
 
 一个自然的思维是将子进程托孤给父进程的父进程，但很有可能出现连环托孤问题。
 于是unix的设计者决定将托孤给一个不会被终止的进程: init/systemd
@@ -43,3 +41,33 @@ int main() {
     return 0;
 }
 ```
+
+复位状态机 : execve(const char *filename, char *const argv[], char * const envp[]);
+------
+execve : 将当前进程重置成一个可执行文件描述状态机的初始状态
+
+可执行文件定义了程序的初始状态 : 代码段，数据段，入口地址。我们在一个进程中调用execve，我们会清空原先进程的所有代码，数据，堆栈。并加载新的filename所指向的可执行文件的代码，数据
+
+```c
+#include <unistd.h>
+#include <stdio.h>
+#include <stdlib.h>
+
+int main() {
+
+    // 准备参数和环境变量
+    char *argv[] = {"/bin/ls", "-l", NULL};  // 命令行参数
+    char *envp[] = {"PATH=/usr/bin", "USER=test", NULL};  // 环境变量
+
+    // 调用 execve 替换为 /bin/ls -l
+    execve("/bin/ls", argv, envp);
+    printf("hello\n"); 
+    return 0;
+}
+```
+
+用一份非常小的代码展示execve的行为。在执行execve后，该进程的所有状态都会被重置为ls这个文件执行时的初始状态。最后的printf自然也不会再执行。
+
+销毁状态机 : _exit(int status)
+------
+摧毁状态机，允许有一个返回值。返回值可以被父进程获取(父进程调用waitpid())。
