--- a/_posts/2025-04-01-L5.md
+++ b/_posts/2025-04-01-L5.md
@@ -6,6 +6,9 @@ categories : [jyyos-2025]
 #excerpt : "点击查看全文"
 ---
 
+进程管理api
+======
+
 立即复制状态机 : fork()
 ------
 复制进程的所有状态 ： 寄存器，每一个字节的内存。区分这两个状态机的唯一方式 : 返回值不同
@@ -71,3 +74,6 @@ int main() {
 销毁状态机 : _exit(int status)
 ------
 摧毁状态机，允许有一个返回值。返回值可以被父进程获取(父进程调用waitpid())。
+
+进程的地址空间
+======
