--- a/_posts/2025-04-01-L5.md
+++ b/_posts/2025-04-01-L5.md
@@ -77,3 +77,16 @@ int main() {
 
 进程的地址空间
 ======
+
+<img src='/images/500x300.png'>
+
+进程的初始状态
+------
+
+execve后的初始状态是由各指令集的abi规定的 : [systemv-abi](https://jyywiki.cn/OS/manuals/sysv-abi.pdf) (3.4 Process Initialization)
+
+包括各个寄存器的初始化，内存中代码段，数据段等包含哪些部分...
+
+mmap系统调用
+------
+在进程的地址空间中，只有elf文件里声明的内存和一些操作系统分配的内存是允许访问的。任何其他指针的访问都是非法的
