--- a/_posts/2025-04-01-L5.md
+++ b/_posts/2025-04-01-L5.md
@@ -78,7 +78,7 @@ int main() {
 进程的地址空间
 ======
 
-<img src='/images/500x300.png'>
+<img src='/images/memory_space.png'>
 
 进程的初始状态
 ------
@@ -90,3 +90,33 @@ execve后的初始状态是由各指令集的abi规定的 : [systemv-abi](https:
 mmap系统调用
 ------
 在进程的地址空间中，只有elf文件里声明的内存和一些操作系统分配的内存是允许访问的。任何其他指针的访问都是非法的
+
+所以我们需要一个为进程分配内存的系统调用
+
+在状态机状态上增加/删除/修改一段可访问的内存
+
+```c
+// 映射
+void *mmap(void *addr, size_t length, int prot, int flags, int fd, off_t offset);
+int   munmap(void *addr, size_t length);
+
+// 修改映射权限
+int   mprotect(void *addr, size_t length, int prot);
+```
+
+```c
+int main() {
+    size_t length = 4096; // 分配 4KB 内存（通常按页对齐）
+    int protection = PROT_READ | PROT_WRITE; // 可读可写
+    int flags = MAP_PRIVATE | MAP_ANONYMOUS; // 私有匿名映射（不关联文件）
+    
+    // 使用 mmap 分配内存
+    void *addr = mmap(NULL, length, protection, flags, -1, 0);
+    if (addr == MAP_FAILED) {
+        perror("mmap failed");
+        return 1;
+    }
+
+    printf("Allocated memory at: %p\n", addr);
+}
+```
