--- a/_posts/2025-04-01-L5.md
+++ b/_posts/2025-04-01-L5.md
@@ -120,3 +120,14 @@ int main() {
     printf("Allocated memory at: %p\n", addr);
 }
 ```
+
+ps : 在使用mmap为当前进程分配了一段空间后，还可以使用pmap查看当前进程的地址空间布局(自行询问ai pmap用法)
+
+入侵进程的地址空间
+------
+
+对于一个进程,假如我们想修改金币个数。
+
+我们只需要在/proc/pid/maps中 提取关键内存区域，然后在/proc/pid/mem中定位需要修改数据的地址。
+
+更多内容见 https://jyywiki.cn/OS/2025/lect6.md
